--- a/app/webroot/css/menu_board/menu_board.css
+++ b/app/webroot/css/menu_board/menu_board.css
@@ -7,19 +7,20 @@
 
 #contentHolder{
 	background-color:#EEEEEE;
-	border:2px solid #FFFFFF;
-	height:300px;
+	/*border:2px solid #FFFFFF;*/
 	margin:20px;
-
 	color:#444444;
 	padding:15px;
+        min-height: 400px;
+        width: 95%;
 }
 
 #tabContent{
-	background-color:#333;
-	border:1px solid #444;
-	margin-top:-15px;
-	width:100%;
+	background-color:#3333;
+	/*border:1px solid #444;
+	margin-top:-15px;*/
+	/*width:97%;*/
+        min-height: 400px;
 }
 
 #tabContent, .tabContainer li a,#contentHolder{
