--- a/app/webroot/css/grid.css
+++ b/app/webroot/css/grid.css
@@ -158,3 +158,5 @@ hr.space {background:#fff;color:#fff;visibility:hidden;}
 .clearfix:after, .container:after {content:"\0020";display:block;height:0;clear:both;visibility:hidden;overflow:hidden;}
 .clearfix, .container {display:block;}
 .clear {clear:both;}
+.full { width: 100%}
+.halffull { width: 50%}
