--- a/app/webroot/css/blueprint/screen.css
+++ b/app/webroot/css/blueprint/screen.css
@@ -25,6 +25,7 @@ a img {border:none;}
 :focus {outline:0;}
 
 /* typography.css */
+/*
 html {font-size:100.01%;}
 body {font-size:75%;color:#222;background:#fff;font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;}
 h1, h2, h3, h4, h5, h6 {font-weight:normal;color:#111;}
@@ -77,6 +78,7 @@ caption {background:#eee;}
 .last {margin-right:0;padding-right:0;}
 .top {margin-top:0;padding-top:0;}
 .bottom {margin-bottom:0;padding-bottom:0;}
+*/
 
 /* forms.css */
 label {font-weight:bold;}
