Cambios en el formuladio de pedido

--- a/app/webroot/css/grid.css
+++ b/app/webroot/css/grid.css
@@ -160,3 +160,28 @@ hr.space {background:#fff;color:#fff;visibility:hidden;}
 .clear {clear:both;}
 .full { width: 100%}
 .halffull { width: 50%}
+
+.with-1 {width:30px;}
+.with-2 {width:70px;}
+.with-3 {width:110px;}
+.with-4 {width:150px;}
+.with-5 {width:190px;}
+.with-6 {width:230px;}
+.with-7 {width:270px;}
+.with-8 {width:310px;}
+.with-9 {width:350px;}
+.with-10 {width:390px;}
+.with-11 {width:430px;}
+.with-12 {width:470px;}
+.with-13 {width:510px;}
+.with-14 {width:550px;}
+.with-15 {width:590px;}
+.with-16 {width:630px;}
+.with-17 {width:670px;}
+.with-18 {width:710px;}
+.with-19 {width:750px;}
+.with-20 {width:790px;}
+.with-21 {width:830px;}
+.with-22 {width:870px;}
+.with-23 {width:910px;}
+.with-24 {width:950px;margin-right:0;}
